--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -73,7 +73,7 @@ th{
 <body>
 
 <h2>Upload Excel File</h2>
-<input type="file" id="excel_file" accept=".xlsx,.xls">
+<input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <!-- 🔍 SEARCH SECTION -->
 <div id="search_section">
