--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -102,12 +102,61 @@ th{
     text-align:left;
 }
 
+    /* ================= PRINT SETTINGS ================= */
+@media print {
+
+    /* ❌ Hide upload & controls */
+    input[type="file"],
+    #search_section,
+    button,
+    h2 {
+        display: none !important;
+    }
+
+    /* ✅ Clean page */
+    body {
+        background: white;
+        padding: 0;
+        margin: 0;
+    }
+
+    /* ✅ Tables full width */
+    table {
+        width: 100% !important;
+        box-shadow: none;
+    }
+
+    /* ✅ Infobox print friendly */
+    .infobox {
+        box-shadow: none;
+        border-left: 5px solid #000;
+        border-right: 5px solid #000;
+        page-break-inside: avoid;
+    }
+
+    /* ✅ Header color force */
+    th {
+        background: #ddd !important;
+        color: black !important;
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
+    }
+
+    /* ✅ Summary row color */
+    .summary {
+        background: #eee !important;
+        font-weight: bold;
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
+    }
+}
+    
 </style>
 </head>
 
 <body>
 
-<h2>Upload Excel File with employee data</h2>
+<h2>Upload Excel File</h2>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <!-- 🔍 SEARCH SECTION -->
