--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -137,14 +137,14 @@ th{
     /* ✅ Header color force */
     th {
         background: #ddd !important;
-        color: black !important;
+        color: exact;
         -webkit-print-color-adjust: exact;
         print-color-adjust: exact;
     }
 
     /* ✅ Summary row color */
     .summary {
-        background: #eee !important;
+        background:exact;
         font-weight: bold;
         -webkit-print-color-adjust: exact;
         print-color-adjust: exact;
@@ -156,7 +156,7 @@ th{
 
 <body>
 
-<h2>Upload Excel File</h2>
+<h2>Upload Excel File with data</h2>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <!-- 🔍 SEARCH SECTION -->
