--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -124,6 +124,9 @@ th{
     table {
         width: 100% !important;
         box-shadow: none;
+        background: exact;
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
     }
 
     /* ✅ Infobox print friendly */
@@ -132,12 +135,14 @@ th{
         border-left: 5px solid #000;
         border-right: 5px solid #000;
         page-break-inside: avoid;
+        background: exact;
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
     }
 
     /* ✅ Header color force */
     th {
-        background: #ddd !important;
-        color: exact;
+        background: exact;
         -webkit-print-color-adjust: exact;
         print-color-adjust: exact;
     }
@@ -156,7 +161,7 @@ th{
 
 <body>
 
-<h2>Upload Excel File with data</h2>
+<h2>Upload Excel File</h2>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <!-- 🔍 SEARCH SECTION -->
