--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -137,7 +137,7 @@ th{
         page-break-inside: avoid;
         background: exact;
         -webkit-print-color-adjust: exact;
-        print-color-adjust: exact;
+     /*   print-color-adjust: exact;*/
     }
 
     /* ✅ Header color force */
