--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -136,8 +136,8 @@ th{
         border-right: 5px solid #000;
         page-break-inside: avoid;
         background: exact;
-        -webkit-print-color-adjust: exact;
-     /*   print-color-adjust: exact;*/
+      /*  -webkit-print-color-adjust: exact;
+       print-color-adjust: exact;*/
     }
 
     /* ✅ Header color force */
@@ -161,7 +161,7 @@ th{
 
 <body>
 
-<h2>Upload Excel File with data</h2>
+<h2>Upload Excel File with</h2>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <!-- 🔍 SEARCH SECTION -->
