--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -76,7 +76,7 @@ th{
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     margin: 30px 0;
     width: 900px;
-    height: 217px;
+    height: 250px;
     border-left: 5px solid #ff8400;
     border-right: 5px solid #ff8400;
     text-align: center;
@@ -132,19 +132,20 @@ th{
         border-left: 5px solid #000;
         border-right: 5px solid #000;
         page-break-inside: avoid;
+        padding: 20px;
     }
 
     /* ✅ Header color force */
     th {
-        background: #ddd !important;
-        color: black !important;
+      /*  background: #ddd !important;
+        color: black !important;*/
         -webkit-print-color-adjust: exact;
         print-color-adjust: exact;
     }
 
     /* ✅ Summary row color */
     .summary {
-        background: #eee !important;
+        /*background: #eee !important;*/
         font-weight: bold;
         -webkit-print-color-adjust: exact;
         print-color-adjust: exact;
@@ -156,7 +157,7 @@ th{
 
 <body>
 
-<h2>Upload Excel file data</h2>
+<h2>Upload Excel file</h2>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <!-- 🔍 SEARCH SECTION -->
