--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -126,14 +126,14 @@ th{
         box-shadow: none;
     }
 
-    /* ✅ Infobox print friendly */
+    /* ✅ Infobox print friendly 
     .infobox {
         box-shadow: none;
         border-left: 5px solid #000;
         border-right: 5px solid #000;
         page-break-inside: avoid;
         padding: 20px;
-    }
+    }*/
 
     /* ✅ Header color force */
     th {
@@ -157,7 +157,7 @@ th{
 
 <body>
 
-<h2>Upload Excel file</h2>
+<h2>Upload Excel </h2>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <!-- 🔍 SEARCH SECTION -->
