--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -123,6 +123,8 @@ th{
     table {
         width: 100% !important;
         box-shadow: none;
+        webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
     }
 
     /* ✅ Infobox print friendly */
@@ -131,6 +133,8 @@ th{
         border-left: 5px solid #000;
         border-right: 5px solid #000;
         page-break-inside: avoid;
+        webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
     }
 
     /* ✅ Header color force */
@@ -155,7 +159,7 @@ th{
 
 <body>
 
-<h1>Upload Excel </h1>
+<h1>Upload Excel fil</h1>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <!-- 🔍 SEARCH SECTION -->
