--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -163,7 +163,7 @@ th{
 
 <body>
 
-<h1>Upload Excel </h1>
+<h1>Upload Excel file</h1>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <!-- 🔍 SEARCH SECTION -->
@@ -513,7 +513,7 @@ const otherRecord = otherSheetData.find(item =>
                 <td>${hra}</td>
                 <td>${ma}</td>
                 <td>${conv}</td>
-                <td>${daArr}</td>
+                <!-- <td>${daArr}</td> -->
                 <td style="background:#fcf568"><b>${gross.toFixed(2)}</b></td>
                 <td>${gpf}</td>
                 <td>${gsli}</td>
@@ -558,7 +558,7 @@ const otherRecord = otherSheetData.find(item =>
         <td>${totals.HRA.toFixed(2)}</td>
         <td>${totals.MA.toFixed(2)}</td>
         <td>${totals.CONV.toFixed(2)}</td>
-        <td>${totals.DAARR.toFixed(2)}</td>
+       <!-- <td>${totals.DAARR.toFixed(2)}</td> -->
         <td>${totalGross.toFixed(2)}</td>
         <td>${totals.GPF.toFixed(2)}</td>
         <td>${totals.GSLI.toFixed(2)}</td>
