--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -163,7 +163,7 @@ th{
 
 <body>
 
-<h1>Upload Excel file</h1>
+<h1>Upload Excel </h1>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <!-- 🔍 SEARCH SECTION -->
@@ -357,7 +357,9 @@ const otherRecord = otherSheetData.find(item =>
     <thead>
         <tr>
             <th>MONTH</th><th>BASIC PAY</th><th>ADDL ALLOW</th><th>DA</th><th>HRA</th>
-            <th>MA</th><th>CONV. ALLOW</th><th>DA ARR</th><th>GROSS PAY</th>
+            <th>MA</th><th>CONV. ALLOW</th>
+           <!-- <th>DA ARR</th> -->
+            <th>GROSS PAY</th>
             <th>GPF</th><th>GSLI</th><th>P.TAX</th><th>I.TAX</th><th>NET PAY</th>
         </tr>
     </thead>
