--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -9,6 +9,33 @@
 <script src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"></script>
 
 <style>
+    .watermark{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-30deg);
+    font-size: 80px;
+    font-weight: bold;
+    color: rgba(0,0,0,0.08); /* watermark light */
+    z-index: 0;
+    pointer-events: none;
+    user-select: none;
+}
+
+/* Ensure content is above watermark */
+body *{
+    position: relative;
+    z-index: 1;
+}
+
+/* Print specific (very important) */
+@media print{
+    .watermark{
+        color: rgba(0,0,0,0.12);
+    }
+}
+    /*watermark complete*/
+    
 body{
     font-family: Arial, sans-serif;
     background:#f4f6f9;
