--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -10,8 +10,10 @@
 
 <style>
     .watermark{
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 6px;
     position: fixed;
-    top: 77%;
+    top: 87%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(0deg);
     font-size: 70px;
