--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -10,10 +10,10 @@
 
 <style>
     .watermark{
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Bookman Old Style", "Bookman", serif;
     letter-spacing: 6px;
     position: fixed;
-    top: 87%;
+    top: 80%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(0deg);
     font-size: 70px;
