--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -18,7 +18,7 @@
     transform: translate(-50%, -50%) rotate(0deg);
     font-size: 57px;
     font-weight: bold;
-    color: rgba(0,0,0,0.08); /* watermark light */
+    color: #fad457; /* watermark light */
     z-index: 0;
     pointer-events: none;
     user-select: none;
