--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -10,7 +10,7 @@
 
 <style>
     .watermark{
-    font-family: "Bookman Old Style", "Bookman", serif;
+    font-family: 'Orbitron', sans-serif;
     letter-spacing: 6px;
     position: fixed;
     top: 83%;
