--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -12,12 +12,13 @@
     .watermark{
     font-family: 'Orbitron', sans-serif;
     letter-spacing: 6px;
+    font-style: italic;
     position: fixed;
     top: 83%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(0deg);
     font-size: 57px;
-    font-weight: bold;
+  /*  font-weight: bold;*/
     color: #fad457; /* watermark light */
     z-index: 0;
     pointer-events: none;
