--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -18,7 +18,6 @@
     left: 50%;
     transform: translate(-50%, -50%) rotate(0deg);
     font-size: 57px;
-  /*  font-weight: bold;*/
     color: #fad457; /* watermark light */
     z-index: 0;
     pointer-events: none;
@@ -175,7 +174,8 @@ th{
     }
     
     .watermark{
-        color: rgba(0,0,0,0.12);
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
     }
 }
     
