--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -11,14 +11,14 @@
 <style>
     .watermark{
     font-family: 'Orbitron', sans-serif;
-    letter-spacing: 6px;
+    letter-spacing: 5px;
     font-style: italic;
     position: fixed;
     top: 83%;
     left: 37%;
     transform: translate(-50%, -50%) rotate(0deg);
     font-size: 37px;
-    color: #fad457; /* watermark light */
+    color: #fad457; 
     z-index: 0;
     pointer-events: none;
     user-select: none;
