--- a/Salary_Statement2.html
+++ b/Salary_Statement2.html
@@ -218,13 +218,11 @@ th{
     </div>
 
 
-
-
 <script>
     //email id checking 
     const allowedEmails = [
-  "example1@gmail.com",
-  "example2@gmail.com"
+  "ujlmndl@gmail.com",
+  "evbasoftware@gmail.com"
 ];
 
 function handleCredentialResponse(response) {
