--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -179,7 +179,53 @@ th{
         print-color-adjust: exact;
     }
 }
+
+ /*   body {
+      font-family: 'Bookman Old Style', serif;
+      background-color: rgb(241, 252, 251);
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }*/
+    .container {
+      width: 100%;
+     /* max-width: 900px;*/
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      outline: 2px solid blue;
+      background-color: white;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      border-bottom: 2px solid blue;
+      color: blue;
+      text-align: center;
+    }
+    .right-border {
+      border-right: 2px solid blue;
+      line-height: 1.3;
+    }
+    input[type="number"], input[type="text"] {
+      width: 120px;
+      text-align: right;
+      items-align: right;
+    }
+    input:disabled {
+      background-color: #fbffc9;
+      color: black;
+      font-weight: bold;
+    }
+    .note { color: red; margin-bottom: 10px; }
+    .sub-label { font-size: 0.9em; margin-left: 20px; }
     
+ 
 </style>
 </head>
 
