--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -26,11 +26,11 @@
 }
     /*watermark complete*/
     
-body{
+/*body{
     font-family: Arial, sans-serif;
     background:#f4f6f9;
     padding:20px;
-}
+}*/
 h2{color:#333}
 
 #search_section{
@@ -180,19 +180,19 @@ th{
     }
 }
 
- /*   body {
+    body {
       font-family: 'Bookman Old Style', serif;
       background-color: rgb(241, 252, 251);
       padding: 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
-    }*/
+    }
     .container {
       width: 100%;
      /* max-width: 900px;*/
     }
-    table {
+  /*  table {
       width: 100%;
       border-collapse: collapse;
       outline: 2px solid blue;
@@ -202,7 +202,7 @@ th{
       border: 1px solid #ccc;
       padding: 8px;
       text-align: left;
-    }
+    }*/
     th {
       border-bottom: 2px solid blue;
       color: blue;
