--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -71,6 +71,7 @@ button{
 table{
     width:100%;
     border-collapse:collapse;
+    outline: 2px solid blue;
     margin-top:20px;
     background:white;
     padding:20px;
@@ -81,8 +82,8 @@ th,td{
     text-align:center;
 }
 th{
-    background:#1971c2;
-    color:white;
+    background:#ffffff;
+    color:solid blue;
     border-bottom: 2px solid blue;
 }
 
