--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -75,11 +75,13 @@ table{
     margin-top:20px;
     background:white;
     padding:20px;
+    word-wrap: break-word;
 }
 th,td{
     border:1px solid #ccc;
     padding:6px;
     text-align:center;
+    word-break: break-word;
 }
 th{
     background:#ffffff;
@@ -105,13 +107,13 @@ th{
     padding: 20px;
     border-radius: 55px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    margin: 30px 0;
-    width: 900px;
+    position: relative;
+    margin: 30px auto;
+    width: 800px;
     height: 250px;
     border-left: 5px solid #ff8400;
     border-right: 5px solid #ff8400;
     text-align: center;
-    left: 37%;
 }
 .infobox h3 {
     margin-top: 0;
