--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -734,9 +734,9 @@ const otherRecord = otherSheetData.find(item =>
                     html += `<tr class="bonus-row">
                         <td><b>BONUS</b></td>
                         <td colspan="6" style="text-align:right; padding-right:20px; font-style:italic;"></td>
-                        <td><b>${bonusAmount.toFixed(2)}</b></td>
+                        <td><b>${Math.round(bonusAmount)}</b></td>
                         <td colspan="4"></td>
-                        <td><b>${bonusAmount.toFixed(2)}</b></td>
+                        <td><b>${Math.round(bonusAmount)}</b></td>
                     </tr>`;
                     totalGross += bonusAmount;
                     totalNet += bonusAmount;
@@ -759,7 +759,7 @@ const otherRecord = otherSheetData.find(item =>
 
     html += `<tr class="summary">
         <td>TOTAL (YEARLY)</td>
-        <td>${totals.BASIC.toFixed(2)}</td>
+        <td>${Math.round(totals.BASIC)}</td>
         <td>${totals.ADDL.toFixed(2)}</td>
         <td>${totals.DA.toFixed(2)}</td>
         <td>${totals.HRA.toFixed(2)}</td>
