--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -581,7 +581,7 @@ const otherRecord = otherSheetData.find(item =>
     <tbody>`;
     
 <!-- table 2nd page -->
-    <div class="page-break"></div>
+ <!--   <div class="page-break"></div> -->
     
     let found = false;
     let bonusAmount = 0;
