--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -165,11 +165,12 @@ th{
         box-shadow: none;
         webkit-print-color-adjust: exact;
         print-color-adjust: exact;
+        font-size: 14px;
     }
 
     /* ✅ Infobox print friendly */
     .infobox {
-        width: 95% !important;
+        width: 100% !important;
         box-shadow: none;
         border-left: 5px solid #ff8400;
         border-right: 5px solid #ff8400;
