--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -92,14 +92,17 @@ th{
 
 .summary{
     background:#fff3bf;
+    font-size:9px;
     font-weight:bold;
 }
 .bonus-row {
     background-color: white !important; 
+    font-size:10px;
     color: #1414e0;
 }
 .arrear-row {
     background-color: #f6f7f0 !important; 
+    font-size:10px;
     color: #fa3c3c;
 }
     /* Infobox Style */
@@ -170,7 +173,7 @@ th{
 
     /* ✅ Infobox print friendly */
     .infobox {
-        width: 90% !important;
+        width: 95% !important;
         box-shadow: none;
         border-left: 5px solid #ff8400;
         border-right: 5px solid #ff8400;
