--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -810,10 +810,10 @@ const otherRecord = otherSheetData.find(item =>
         let infoboxHtml = '';
         if (otherRecord) {
             infoboxHtml = `<div class="infobox">
-                <h2 style="color: #1414e0;"> Office of the Sub-Inspector of Schools, ${circleName} Circle, ${distName}</h2>
+                <h3 style="color: #1414e0;"> Office of the Sub-Inspector of Schools, ${circleName} Circle, ${distName}</h3>
                  <h4 style="color: #8e14e0;">SALARY STATEMENT FOR THE FINANCIAL YEAR ${year} - ${year+1} (AY ${year+1}-${year+2})</h4>
             
-                <table>
+                <table style="font-size:10px;">
                     <tr><td><strong>Teacher Name:</strong> ${teacherName}</td>
                     <td><strong>Designation:</strong> ${designation} &emsp;&emsp;&emsp;
                     <strong>Gender:</strong> ${sex}</td></tr>
