--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -151,7 +151,7 @@ th{
 
     th, td {
         padding: 4px;
-        word-break: break-word;
+      /*  word-break: break-word;*/
     }
     
     /* ✅ Clean page */
@@ -568,7 +568,7 @@ const otherRecord = otherSheetData.find(item =>
         GPF: 0, GSLI: 0, PTAX: 0, ITAX: 0
     };
 
-    let html = `<table style="font-size:10px;">
+    let html = `<table style="font-size:11px;">
     <thead>
         <tr>
             <th>MONTH</th><th>BASIC PAY</th><th>ADDL ALLOW</th><th>DA</th><th>HRA</th>
