--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -44,7 +44,7 @@ h2{color:#333}
     background:white;
     border-radius:20px;
     box-shadow:0 2px 8px rgba(0,0,0,0.1);
-    width:360px;
+    width:470px;
 }
 
 input[type=text]{
@@ -293,9 +293,9 @@ th{
         <tr>
           <td style="text-align: left;" class="right-border" >
             4) Any other Income (Interest etc.):<br>
-            <span class="sub-label">(i) &ensp;<input type="text" id="oi1_text" style="text-align: left; width: 170px;" placeholder="Mention Source of Income"></span> &emsp;&emsp;
+            <span class="sub-label">(i) &ensp;<input type="text" id="oi1_text" style="text-align: left; width: 170px; height: 20px;" placeholder="Mention Source of Income"></span> &emsp;&emsp;
             <input type="number" id="oi1" value="0" oninput="calculateAll()"><br>
-            <span class="sub-label">(ii) <input type="text" id="oi2_text" style="text-align: left; width: 170px;" placeholder="Mention Source of Income" ></span> &emsp;&emsp;
+            <span class="sub-label">(ii) <input type="text" id="oi2_text" style="text-align: left; width: 170px; height: 20px;" placeholder="Mention Source of Income" ></span> &emsp;&emsp;
             <input type="number" id="oi2" value="0" oninput="calculateAll()"><br>
             <span class="sub-label">(iii) Savings Account Interest:</span> &ensp;&emsp;
             <input type="number" id="oi3" value="0" oninput="calculateAll()"><br>
