--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -134,7 +134,7 @@ th{
 }
 .infobox td:first-child {
     font-weight: bold;
-    width: 375px;
+    width: 355px;
     color: #555;
     text-align:left;
 }
@@ -247,7 +247,7 @@ th{
        <!-- 🔍 SEARCH SECTION -->
       <div id="search_section">
         <label><b>Search Employee</b></label>
-        <input type="text" id="searchBox" list="name_list" placeholder="Enter Name" style="width: 170px;">
+        <input type="text" id="searchBox" list="name_list" placeholder="Enter Name" style="width: 270px; text-align:Left;">
         <datalist id="name_list"></datalist>
 
       <div style="text-align:center">
@@ -293,9 +293,9 @@ th{
         <tr>
           <td style="text-align: left;" class="right-border" >
             4) Any other Income (Interest etc.):<br>
-            <span class="sub-label">(i) &ensp;<input type="text" id="oi1_text" style="text-align: left; width: 170px; height: 10px;" placeholder="Mention Source of Income"></span> &emsp;&emsp;
+            <span class="sub-label">(i) &ensp;<input type="text" id="oi1_text" style="text-align: left; width: 170px; height: 8px;" placeholder="Mention Source of Income"></span> &emsp;&emsp;
             <input type="number" id="oi1" value="0" oninput="calculateAll()"><br>
-            <span class="sub-label">(ii) <input type="text" id="oi2_text" style="text-align: left; width: 170px; height: 10px;" placeholder="Mention Source of Income" ></span> &emsp;&emsp;
+            <span class="sub-label">(ii) <input type="text" id="oi2_text" style="text-align: left; width: 170px; height: 8px;" placeholder="Mention Source of Income" ></span> &emsp;&emsp;
             <input type="number" id="oi2" value="0" oninput="calculateAll()"><br>
             <span class="sub-label">(iii) Savings Account Interest:</span> &ensp;&emsp;
             <input type="number" id="oi3" value="0" oninput="calculateAll()"><br>
@@ -374,7 +374,7 @@ th{
         </tr>
       </tbody>
     </table>
-            </div>
+     </div>
     </div>    
      
 
@@ -383,7 +383,9 @@ th{
     /*email id checking */
     const allowedEmails = [
   "ujlmndl@gmail.com",
-  "evbasoftware@gmail.com"
+  "evbasoftware@gmail.com",
+  "d.p.denayek@gmail.com",
+  "blarakesh@gmail.com"           
 ];
 
 function handleCredentialResponse(response) {
